[package]
name = "progress-token"
version = "0.6.0"
edition = "2024"
authors = ["Ibiyemi Abiodun <ibiyemi@intulon.com>"]
description = "A library for tracking progress of long-running tasks"
license = "MIT"
repository = "https://github.com/laptou/progress-token"

[dependencies]
tokio = { version = "1.44", features = ["sync", "macros"] }
tokio-util = "0.7.14"
tokio-stream = { version = "0.1", features = ["sync"] }
futures = { version = "0.3", features = ["std"] }
pin-project-lite = "0.2.16"
serde = { version = "1.0", optional = true }
thiserror = "2.0.12"

[features]
serde = ["dep:serde"]

[dev-dependencies]
tokio = { version = "1.44", features = [
  "sync",
  "time",
  "macros",
  "rt-multi-thread",
] }
